--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 POSTGRES_USER=socialblock
 POSTGRES_PASSWORD=socialblock
 POSTGRES_DB=socialblock
+
 ARP_AGENT_API_KEY=dev-key
+ARP_AGENT_DB_URL=postgresql://socialblock:socialblock@db:5432/socialblock
+
 RPC_WS=ws://node:26657/websocket
 RPC_HTTP=http://node:26657
 INDEXER_DB_URL=postgresql://socialblock:socialblock@db:5432/socialblock
